[gd_scene load_steps=4 format=3 uid="uid://dlahxcocrrnoc"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_3w46l"]
[ext_resource type="Texture2D" uid="uid://bhesq1yt5nxts" path="res://laserGreen10.png" id="1_tnjm4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hwuj7"]
radius = 7.0
height = 50.0

[node name="bullet" type="Area2D" groups=["bullet"]]
position = Vector2(-18, 0)
rotation = 1.5708
collision_layer = 8
collision_mask = 14
script = ExtResource("1_3w46l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -17.1664)
scale = Vector2(1, 0.364206)
texture = ExtResource("1_tnjm4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6.51598e-05, -18)
rotation = 3.14159
scale = Vector2(-0.803729, 0.317722)
shape = SubResource("CapsuleShape2D_hwuj7")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, -22)
scale = Vector2(0.65, 0.25)

[node name="AutoDelete" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="AutoDelete" to="." method="_on_auto_delete_timeout"]
